--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: unset !important;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #000000;
@@ -27,6 +31,7 @@ body {
 .layout_padding-bottom {
   padding-bottom: 75px;
 }
+
 .heading_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,13 +75,11 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  width: 100vw; /* Zorg dat het element de volledige breedte beslaat */
   background-color: #b5caee;
   background-image: url(../images/hero-bg.jpg);
   background-size: cover;
 }
-}
-  
+
 .sub_page .hero_area {
   height: auto;
 }
